Optimize trading latency benchmark environment
- Update JVM tuning parameters with NUMA binding and core pinning
- Add OS tuning playbook for ultra-low latency trading systems
- Create dedicated server startup script with NUMA and core affinity
- Update client script with optimized ZGC parameters
- Update EC2 instance type in inventory from c7i-metal-4xl to c7i-4xlarge